# backend/openapi-gen/src/main/java/ru/itmo/gen/model/OrganizationPayment.java
@@ -1,0 +1,85 @@
+package ru.itmo.gen.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import java.util.UUID;
+import org.springframework.lang.Nullable;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * OrganizationPayment
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.15.0")
+public class OrganizationPayment {
+
+  private @Nullable UUID id;
+
+  public OrganizationPayment id(@Nullable UUID id) {
+    this.id = id;
+    return this;
+  }
+
+  /**
+   * Идентификатор воркфлоу создания организации
+   * @return id
+   */
+  @Valid 
+  @Schema(name = "id", description = "Идентификатор воркфлоу создания организации", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("id")
+  public @Nullable UUID getId() {
+    return id;
+  }
+
+  public void setId(@Nullable UUID id) {
+    this.id = id;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    OrganizationPayment organizationPayment = (OrganizationPayment) o;
+    return Objects.equals(this.id, organizationPayment.id);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(id);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class OrganizationPayment {\n");
+    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
