# backend/swagger.yaml
@@ -24,6 +24,20 @@ tags:
 
 components:
   schemas:
+    OrganizationPayment:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          description: Идентификатор воркфлоу создания организации
+    Balance:
+      type: object
+      properties:
+        balance:
+          type: number
+          format: int64
+          description: Количество денег в копейках
     Pagination:
       type: object
       properties:
@@ -611,3 +625,71 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/OrganizationArray'
+  /orgdirectory/organization:
+    post:
+      tags:
+        - OrgDirectories
+      summary: Добавить новую организацию с оплатой размещения
+      description: Создает новую организацию в коллекции
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Organization'
+      responses:
+        '201':
+          description: UUID воркфлоу по созданию организации
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrganizationPayment'
+    get:
+      tags:
+        - OrgDirectories
+      summary: Получить статус созданной организации
+      description: Возвращает статус операции
+      parameters:
+        - name: uuid
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Созданная организация
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Organization'
+        '404':
+          description: Операция не найдена
+        '402':
+          description: Недостаточно средств
+        '500':
+          description: Проблема при создании организации, попробуйте еще раз
+  /orgdirectory/balance:
+    get:
+      tags:
+        - OrgDirectories
+      summary: Получить баланс
+      responses:
+        '200':
+          description: Баланс
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Balance'
+    post:
+      tags:
+        - OrgDirectories
+      summary: Пополнить счет
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Balance'
+      responses:
+        '200':
+          description: Успешное пополнение
